Update title and maintenance message in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ivy Mycelia</title>
 </head>
 <body>
-
+<h1 style="text-align: center">Under Maintenance</h1>
 </body>
 </html>
